fixed problem with user img click when on mobile view

--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
 	z-index: 998;
 	position: fixed;
 	right: 3%;
-	top: -100px;
+	top: -100%;
 	height: auto;
 	width: 320px;
 	display: flex;
